# GuildWars2-Rust-API-viewer

./: README.md
GuildWars2_API2/: local.properties  settings.gradle.kts
GuildWars2_API2/app/: build.gradle.kts
GuildWars2_API2/app/src/androidTest/java/com/example/guildwars2_api/: ExampleInstrumentedTest.kt
GuildWars2_API2/app/src/main/: AndroidManifest.xml
GuildWars2_API2/app/src/main/java/com/example/guildwars2_api/: MainActivity.kt
GuildWars2_API2/app/src/main/java/com/example/guildwars2_api/ui/gallery/: GalleryFragment.kt  GalleryViewModel.kt
GuildWars2_API2/app/src/main/res/drawable/: side_nav_bar.xml
GuildWars2_API2/app/src/main/res/layout/: app_bar_main.xml  content_main.xml  nav_header_main.xml
GuildWars2_API2/app/src/main/res/navigation/: mobile_navigation.xml
GuildWars2_API2/app/src/main/res/values/: strings.xml  themes.xml
GuildWars2_API2/app/src/main/res/values-night/: themes.xml
GuildWars2_API2/app/src/test/java/com/example/guildwars2_api/: ExampleUnitTest.kt
GuildWars2_API2/gradle/wrapper/: gradle-wrapper.properties
GuildWars2_api/: Cargo.toml
GuildWars2_api/src/: main.rs
GuildWars2_api/src/api/: api_call.rs  api_call_functions.rs  api_endpoints.rs  api_enums.rs  string_parser.rs
GuildWars2_api/src/api_match_call/: api_call_enums.rs  api_call_functions.rs  match_call_functions.rs
GuildWars2_api/src/structure/: account.rs  character.rs
GuildWars2_api/struct/: character.rs
Guilwars2_UI/app/src/main/java/com/example/guildwars2_app/: MainActivity.kt
Guilwars2_UI/app/src/main/res/values/: themes.xml
(+7 files in other folders)
