[package]
name = "GuildWars2_api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.11", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["derive"] }
urlencoding = "2.1.3"
web-sys = { version = "0.3.77", features = ["Window", "Location"] }
